css/interface.css
* {
    margin: 0px;
    padding: 0px;
}

/*
    MAIN CONTAINERS
*/

#sfc-app-container {
    z-index: 1000;
    position: fixed;
    top: 0px;
    right: 0px;
}

#sfc-main {
    background-color: rgba(0,0,0,0.8);

    -webkit-box-shadow: inset 0px 0px 89px 16px rgba(0,0,0,0.8);
    -moz-box-shadow: inset 0px 0px 89px 16px rgba(0,0,0,0.8);
    box-shadow: inset 0px 0px 89px 16px rgba(0,0,0,0.8);

    height: 100vh;
    max-height: 100vh;
    width: 100vw;
    max-width: 100vw;
    overflow: hidden;
}

#sfc-secondary {
    max-width: 100vw;
    height: 100%;
    margin: auto 0px;
    font-family: 'Asap', sans-serif;
    font-weight: 500;
    /* background-color: rgba(180, 140, 20, 0.693); */
}

/*
    BUTTONS
*/

.sfc-button {
    background-color: rgba(255, 255, 255, 0.5);
    background-position: center;
    background-repeat: no-repeat;
    border-radius: 50%;
    display: inline;
    margin: auto 15px;
    opacity: 0.1;
    padding: 20px;
    z-index: 500;

    -webkit-transition: opacity 0.2s; /* Safari */
    transition: opacity 0.2s;
}
.sfc-button:hover { opacity: 1; }

.sfc-button-arrow {
    background-image: url("/resources/images/arrow.png");
    background-size: 70%;
    background-position-x: 57%; /*Compensation for apparent off-centered-ness*/
}
#sfc-button-left { transform: rotate(180deg); }
#sfc-button-right { transform: rotate(360deg); } /*required because css is stupid*/

#sfc-button-gallery {
    background-image: url("/resources/images/grid.png");
    background-size: 50%;
    
    position: fixed;
    bottom: 15px;
    
    -webkit-transition: transform 0.5s; /* Safari */
    transition: transform 0.5s;
}

/*
    STAGE and related items
*/

#sfc-stage { 
    width: 100%;
    height: 100%;
    object-fit: contain;
    /* background-color: rgba(145,145,145, 0.4) */
}

#sfc-now-playing  {
    margin: auto;
    max-width: 100%;
    max-height: 100%;
}

#sfc-counter {
    color: white;
    padding: 15px;
    position: fixed;
    right: 0px;
}

#sfc-counter > * {
    display: inline;
    font-family: Asap;
    padding: 2px;
}

/*
    Gallery and related items
*/

#sfc-gallery {
    -webkit-transition: height 0.5s; /* Safari */
    transition: height 0.5s;
}

#sfc-gallery-slider {
    padding-left: 60px;
    overflow-wrap: normal;
}

#sfc-gallery-table {
    border-collapse: separate;
}

.sfc-thumbnail {
    height: 60px;
    margin: 2px 0px;
    box-sizing: border-box;
    border: 2px solid transparent;
    opacity: 0.5;
}

/*
    Flex classes...
    flex: flex-grow flex-shrink flex-basis|auto|initial|inherit;
*/
.sfc-flex-row {
    display: flex;
    flex-direction: row;
}

.sfc-flex-col {
    display: flex;
    flex-direction: column;
}

.sfc-flex-grow   { flex: 1 0 auto; }
.sfc-flex-shrink { flex: 0 1 auto; }

.sfc-flex-around { justify-content: space-around; }
.sfc-flex-between{ justify-content: space-between }
.sfc-flex-start  { justify-content: flex-start;   }
.sfc-flex-end    { justify-content: flex-end;     }
.sfc-flex-center { justify-content: center;       }

/*
    FONT
*/

@font-face {
    font-family: 'Asap';
    src: url('/resources/fonts/Asap-Regular.ttf'); /* IE9 Compat Modes */
  }

  /*
    VIDEO CONTROLS (because they are - by standard of all html - fucked. Really fucked.
  */

